@@ -3,6 +3,7 @@
 = GENI Portal Release Notes =
 
 == 2.6.1 ==
+  * Ticket #915: Fix displaying email address in handle project request
 
 == 2.6 ==
   * Split out the clearinghouse implementation into the new `chapi`
